other-mpol/add-image-as-env-var/.chainsaw-test/kuttlresource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: add-image-as-env-var
spec:
  containers:
  - name: busybox
    image: aiboelckajdow:1.35
    env:
    - name: FOO
      value: bar
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: add-image-as-env-var
spec:
  containers:
  - name: busybox
    image: bicoapeibsjasjdhb:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: add-image-as-env-var
spec:
  containers:
  - name: busybox
    image: pqmbjduzivyyaiv:1.35
    env:
    - name: COLOR
      value: red
    - name: K8S_IMAGE
      value: stale.example/busybox:old
  - name: nginx
    image: yqkbmzydleyds:1.1.0
    env:
    - name: K8S_IMAGE
      value: stale.example/nginx:old
  initContainers:
  - name: init
    image: ghcr.io/init:1.0
