other-mpol/add-image-as-env-var/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-image-as-env-var
